controllers/templates/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    l6p-app: kun-api
  name: kun-api
spec:
  replicas: 0
  selector:
    matchLabels:
      l6p-app: kun-api
  template:
    metadata:
      labels:
        l6p-app: kun-api
    spec:
      containers:
        - name: api
          image: ""
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 1323
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/v1/ping
              port: http
          livenessProbe:
            httpGet:
              path: /api/v1/ping
              port: http
      serviceAccountName: kun-api
      terminationGracePeriodSeconds: 10
