controllers/templates/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    l6p-app: kun-api
  name: kun-api
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    l6p-app: kun-api
  type: ClusterIP
