controllers/templates/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    l6p-app: kun-api
  name: kun-api
spec:
  rules:
    - host: ""
      http:
        paths:
          - backend:
              service:
                name: kun-api
                port:
                  number: 80
            path: /api/v1
            pathType: Prefix
